setting up split transaction list page

--- a/templates/webapp/reports/reports.html
+++ b/templates/webapp/reports/reports.html
@@ -13,7 +13,7 @@
 </div>
 
 
-<div class="content-column" ng-controller="ReportsCtrl" id="reports">
+<div class="content-column" id="reports">
     <form class="form-inline" id="period-form">
         <div class="form-group">
             <label for="period" class="form-label">{% trans "Period:" %}</label>
