--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -17,6 +17,7 @@
     <ul class="nav navbar-nav">
         <li ng-class="{active: $state.includes('transactions')}" id="transaction-list-link"><a href="#/transactions">{% trans "Transactions" %}</a></li>
         <li ng-class="{active: $state.includes('reports')}" id="reports-link"><a href="#/reports">{% trans "Reports" %}</a></li>
+        <li ng-class="{active: $state.includes('settings')}" id="settings-link"><a href="#/settings">{% trans "Configurações" %}</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
         {% include "webapp/user-menu.html" %}
@@ -40,6 +41,10 @@
 
 <script type="text/ng-template" id="/partials/reports/balance">
 {% include "webapp/reports/balance.html" %}
+</script>
+
+<script type="text/ng-template" id="/partials/settings">
+{% include "webapp/settings/settings.html" %}
 </script>
 
 
@@ -92,6 +97,7 @@
         <script src="{{controllers}}category-edit-ctrl.js"></script>
         <script src="{{controllers}}reports-ctrl.js"></script>
         <script src="{{controllers}}installment-form-ctrl.js"></script>
+        <script src="{{controllers}}split-transaction-list-ctrl.js"></script>
 
         <script src="{{app}}services.js"></script>
         <script src="{{app}}modules/charts.js"></script>
