--- a/static/less/webapp/transaction-list.less
+++ b/static/less/webapp/transaction-list.less
@@ -29,7 +29,6 @@ a[data-toggle="collapse"] {
             border-bottom: 1px solid #ccc;
             box-shadow: 0px 5px 2px -4px #ccc;
 
-
             .panel-title {
                 .group-total {
                     font-family: @font-family-sans-serif;
@@ -50,89 +49,91 @@ a[data-toggle="collapse"] {
             padding: 0;
 
             table {
-                border: 1px solid @table-border-color;
-                border-top: 0;
-                border-right: 0;
-                border-bottom: 0;
-                width: initial;
-                margin-left: 25px;
-                margin-right: 15px;
-                margin-bottom: 0;
-
-                td {
-                    border: 0;
-                }
-
-                thead {
-                    td {
-                        padding-top: 30px;
-                    }
-                    .category-column-header, .date-column-header, .value-column-header, .action-bar-header, .installment-data-column-header {
-                        width: 1%;
-                    }
-                    .value-column-header {
-                        text-align: right;
-                    }
-                    .action-bar-header {
-                        background-color: transparent;
-                        border-left: 1px solid @table-border-color;
-                    }
-                }
-
-                .transaction-row {
-                    .date-column, .category-column {
-                        font-weight: bold;
-                    }
-
-                    .value-column {
-                        text-align: right;
-                        white-space: nowrap;
-
-                        &.renevue {
-                            background-color: lighten(@renevues, 45%);
-                        }
-
-                        &.expense {
-                            background-color: lighten(@expenses, 55%);
-                        }
-                    }
-
-                    .installment-data-column {
-                        text-align: right;
-                        white-space: nowrap;
-                    }
-
-                    td.action-bar {
-                        border-left: 1px solid @table-border-color !important;
-                        border-bottom: 0px !important;
-                        background-color: transparent;
-
-                        i {
-                            cursor: pointer;
-                            visibility: hidden;
-                            opacity: 0;
-                            transition: opacity 0.3s;
-                        }
-
-                        .delete-transaction:hover {
-                            color: @brand-danger;
-                        }
-                    }
-
-                    &:hover td.action-bar > * {
-                        visibility: visible;
-                        transition: opacity 0.3s;
-                        opacity: 1;
-                    }
-
-                    &:last-child td {
-                        border-bottom: 1px solid @table-border-color;
-                    }
-                }
+                border-left: 1px solid @table-border-color;
             }
         }
     }
 }
+
+table.transaction-table {
+    border: 0;
+    width: initial;
+    margin-left: 25px;
+    margin-right: 15px;
+    margin-bottom: 0;
+
+    td {
+        border: 0;
+    }
+
+    thead {
+        td {
+            padding-top: 30px;
+        }
+        .category-column-header, .date-column-header, .value-column-header, .action-bar-header, .installment-data-column-header {
+            width: 1%;
+        }
+        .value-column-header {
+            text-align: right;
+        }
+        .action-bar-header {
+            background-color: transparent;
+            border-left: 1px solid @table-border-color;
+        }
+    }
+
+    .transaction-row {
+        .date-column, .category-column {
+            font-weight: bold;
+        }
+
+        .value-column {
+            text-align: right;
+            white-space: nowrap;
+
+            &.renevue {
+                background-color: lighten(@renevues, 45%);
+            }
+
+            &.expense {
+                background-color: lighten(@expenses, 55%);
+            }
+        }
+
+        .installment-data-column {
+            text-align: right;
+            white-space: nowrap;
+        }
+
+        td.action-bar {
+            border-left: 1px solid @table-border-color !important;
+            border-bottom: 0px !important;
+            background-color: transparent;
+
+            i {
+                cursor: pointer;
+                visibility: hidden;
+                opacity: 0;
+                transition: opacity 0.3s;
+            }
+
+            .delete-transaction:hover {
+                color: @brand-danger;
+            }
+        }
+
+        &:hover td.action-bar > * {
+            visibility: visible;
+            transition: opacity 0.3s;
+            opacity: 1;
+        }
+
+        &:last-child td {
+            border-bottom: 1px solid @table-border-color;
+        }
+    }
+}
+
 
 .month-selector {
     text-align: center;
