--- a/templates/webapp/transactions/transaction-list.html
+++ b/templates/webapp/transactions/transaction-list.html
@@ -93,7 +93,7 @@
 
                 <div id="category(($index))" class="panel-collapse collapse" category-collapse="group.name">
                     <div class="panel-body">
-                        <table class="table table-striped">
+                        <table class="table table-striped transaction-table">
                             <thead><tr>
                                 <td class="date-column-header">
                                     {% trans "Date" %}
