--- a/static/less/webapp/transaction-list.less
+++ b/static/less/webapp/transaction-list.less
@@ -28,6 +28,7 @@ a[data-toggle="collapse"] {
             background-color: transparent;
             border-bottom: 1px solid #ccc;
             box-shadow: 0px 5px 2px -4px #ccc;
+            cursor: pointer;
 
             .panel-title {
                 .group-total {
