--- a/templates/webapp/settings/split-transactions.html
+++ b/templates/webapp/settings/split-transactions.html
@@ -1,58 +1,82 @@
 {% load i18n %}
 
-<h4 class="area-header">{% trans "Movimentações parceladas" %}</h4>
 
-<table class="table table-striped transaction-table">
-    <thead><tr>
-        <td class="description-column-header">
-            {% trans "Descrição" %}
-        </td>
-        <td class="installment-data-column-header">
-            {% trans "Parcelas" %}
-        </td>
-        <td class="value-column-header">
-            {% trans "Valor total" %}
-        </td>
-        {% comment %}
-        <td class="action-bar-header"></td>
-        {% endcomment %}
-    </tr></thead>
+<div id="transaction-list-panel">
 
-    <tbody>
-    <tr class="transaction-row"
-        ng-repeat="split in splitTransactions">
+    <h4 class="area-header">{% trans "Movimentações parceladas" %}</h4>
 
-        <td class="description-column" ng-bind="split.description" hashtagged></td>
+    <div class="panel-group" id="split-transactions">
+        <div id="split-transaction-(($index))" class="panel panel-default transaction-group" ng-repeat="split in splitTransactions">
 
-        <td class="installment-data-column">
-            <a
-                    ng-bind="split.transactions.length"
-                    data-toggle="tooltip"
-                    data-placement="bottom"
-                    tooltip
-                    title="{% trans "Total de parcelas" %}"></a>
-        </td>
+            <div class="panel-heading"
+                    data-toggle="collapse"
+                    class="accordion-toggle"
+                    href="#split(($index))"
+                    data-parent="#split-transactions"
+                    {% comment %}track="click,Transactions,open-category" {% endcomment %}>
 
-        <td class="value-column" is-positive-class="split.total_value">
-            <span ng-bind="split.total_value | currency"></span>
-        </td>
+                <h4 class="panel-title">
+                    <a ng-bind="split.description || '({% trans "Sem descrição" %})'"></a>
 
-        {% comment %}
+                    <span class="group-total pull-right" ng-bind="split.total_value | currency" is-positive-class="split.total_value"></span>
+                </h4>
+            </div>
 
-        <td class="action-bar" ex-actionbar ng-controller="TransactionActionBarCtrl">
-            <i
-                    class="fa fa-trash-o fa-lg delete-transaction"
-                    ng-click="removeTransaction()"
-                    confirmation-needed="{% trans "Do you wish to remove this category?" %}"
-                    data-toggle="tooltip"
-                    data-placement="right"
-                    data-container="body"
-                    tooltip
-                    title="{% trans "Remove this transaction" %}"
-                    ></i>
-        </td>
+            <div id="split(($index))" class="panel-collapse collapse">
+                <div class="panel-body">
+                    <table class="table table-striped transaction-table">
+                        <thead><tr>
+                            <td class="date-column-header">
+                                {% trans "Date" %}
+                            </td>
+                            <td class="description-column-header">
+                                {% trans "Description" %}
+                            </td>
+                            <td class="installment-data-column-header"></td>
+                            <td class="value-column-header">
+                                {% trans "Value" %}
+                            </td>
+                            <td class="action-bar-header"></td>
+                        </tr></thead>
 
-        {% endcomment %}
-    </tr>
-    </tbody>
-</table>
+                        <tbody>
+                        <tr class="transaction-row"
+                            ng-repeat="transaction in split.transactions">
+
+                            <td class="date-column" ng-bind="transaction.date | date:'dd/MM'"></td>
+
+                            <td class="description-column" ng-bind="transaction.description" hashtagged></td>
+
+                            <td class="installment-data-column">
+                                <a
+                                        ng-bind="transaction.installment_data"
+                                        data-toggle="tooltip"
+                                        data-placement="bottom"
+                                        tooltip
+                                        title="{% trans "Número desta parcela" %}"></a>
+                            </td>
+
+                            <td class="value-column" is-positive-class="transaction.value">
+                                <span ng-bind="transaction.value | currency"></span>
+                            </td>
+
+                            <td class="action-bar" ex-actionbar ng-controller="TransactionActionBarCtrl">
+                                <i
+                                        class="fa fa-trash-o fa-lg delete-transaction"
+                                        ng-click="removeTransaction()"
+                                        confirmation-needed="{% trans "Do you wish to remove this category?" %}"
+                                        data-toggle="tooltip"
+                                        data-placement="right"
+                                        data-container="body"
+                                        tooltip
+                                        title="{% trans "Remove this transaction" %}"
+                                        ></i>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
