--- a/templates/webapp/settings/settings.html
+++ b/templates/webapp/settings/settings.html
@@ -4,8 +4,8 @@
     <h4 class="area-header">{% trans "Menu" %}</h4>
 
     <div class="list-group">
-        <a class="list-group-item" ng-class="{active: $state.includes('settings.split_transactions')}"  href="#/settings/split-transactions">
-            {% trans "Compras parceladas" %}
+        <a class="list-group-item" ng-class="{active: $state.includes('settings.ETC')}"  href="#/settings/example">
+            Exemplo
         </a>
     </div>
 </div>
