reverting popover work

--- a/templates/webapp/transactions/transaction-list.html
+++ b/templates/webapp/transactions/transaction-list.html
@@ -133,7 +133,7 @@
                                         <i
                                             class="fa fa-trash-o fa-lg delete-transaction"
                                             ng-click="removeTransaction()"
-                                            confirmation-needed="{% trans "Do you wish to remove this category?" %}"
+                                            confirmation-needed="{% trans "Deseja remover esta movimentação?" %}"
                                             data-toggle="tooltip"
                                             data-placement="right"
                                             data-container="body"
@@ -157,7 +157,7 @@
                     </h4>
                 </div>
                 <div class="panel-body">
-                    <table class="table table-striped">
+                    <table class="table table-striped transaction-table">
                         <thead><tr>
                             <td class="category-column-header">
                                 {% trans "Category" %}
@@ -181,13 +181,13 @@
                                 <td class="description-column" ng-bind="transaction.description"></td>
 
                                 <td class="installment-data-column">
-                                        <a
-                                            ng-bind="transaction.installment_data"
-                                            data-toggle="tooltip"
-                                            data-placement="bottom"
-                                            tooltip
-                                            title="{% trans "Número desta parcela" %}"></a>
-                                    </td>
+                                    <a
+                                        ng-bind="transaction.installment_data"
+                                        data-toggle="tooltip"
+                                        data-placement="bottom"
+                                        tooltip
+                                        title="{% trans "Número desta parcela" %}"></a>
+                                </td>
 
                                 <td class="value-column" is-positive-class="transaction.value">
                                     <span ng-bind="transaction.value | currency"></span>
@@ -197,10 +197,11 @@
                                     <i
                                         class="fa fa-trash-o fa-lg delete-transaction"
                                         ng-click="removeTransaction()"
-                                        confirmation-needed="{% trans "Do you wish to remove this category?" %}"
+                                        confirmation-needed="{% trans "Deseja remover esta movimentação?" %}"
                                         data-toggle="tooltip"
                                         data-placement="right"
                                         data-container="body"
+                                        tooltip
                                         title="{% trans "Remove this transaction" %}"
                                     ></i>
                                 </td>
