validating, executing query, showing result

--- a/templates/admin/email_interface/index.html
+++ b/templates/admin/email_interface/index.html
@@ -18,6 +18,9 @@
 
 {% block content %}
     <div id="content-main">
+        {% if form.non_field_erros %}
+            <ul class="errorlist"><li>{{ form.non_field_errors }}</li></ul>
+        {% endif %}
         <form action="" method="post" id="user-query-form">{% csrf_token %}
             <div>
                 <fieldset class="module aligned ">
