--- a/templates/password_reset/reset.html
+++ b/templates/password_reset/reset.html
@@ -24,7 +24,7 @@
         </p>
 		<form method="post" action="{% url "password_reset_reset" token %}" class="form-horizontal">{% csrf_token %}
             <div class="form-group {% if form.password1.errors %}has-error{% endif %}">
-                <label for="id_password1" class="col-lg-4 form-label">{% trans "New password" %}</label>
+                <label for="id_password1" class="col-lg-4 control-label">{% trans "New password" %}</label>
                 <div class="col-lg-8 input-icon">
                     <i class="fa fa-asterisk input-icon-prepend"></i>
                     <input id="id_password1" name="password1" type="password" class="form-control" required>
@@ -34,7 +34,7 @@
                 </div>
             </div>
             <div class="form-group {% if form.password2.errors %}has-error{% endif %}">
-                <label for="id_password2" class="col-lg-4 form-label">{% trans "Confirm password" %}</label>
+                <label for="id_password2" class="col-lg-4 control-label">{% trans "Confirm password" %}</label>
                 <div class="col-lg-8 input-icon">
                     <i class="fa fa-asterisk input-icon-prepend"></i>
                     <input id="id_password2" name="password2" type="password" class="form-control" required>
