--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -76,6 +76,8 @@
         <script src="{{lib}}min/angular-resource.min.js"></script>
         <script src="{{lib}}min/angular-animate.min.js"></script>
         <script src="{{lib}}min/angular-ui-router.min.js"></script>
+        <script src="{{lib}}modal.js"></script>
+        <script src="{{lib}}dimensions.js"></script>
         <script src="{{lib}}highcharts.src.js"></script>
         <script src="{{lib}}bootstrap-datepicker.js"></script>
         <script src="{{lib}}toastr.js"></script>
