--- a/templates/webapp/transactions/transaction-list.html
+++ b/templates/webapp/transactions/transaction-list.html
@@ -93,7 +93,7 @@
 
                 <div id="category(($index))" class="panel-collapse collapse" category-collapse="group.name">
                     <div class="panel-body">
-                        <table class="table table-striped transaction-table">
+                        <table class="table table-striped table-hover transaction-table">
                             <thead><tr>
                                 <td class="date-column-header">
                                     {% trans "Date" %}
@@ -109,8 +109,9 @@
                             </tr></thead>
 
                             <tbody>
-                                <tr class="transaction-row" 
-                                    ng-repeat="transaction in group.transactions">
+                                <tr class="transaction-row"
+                                    ng-repeat="transaction in group.transactions"
+                                    ng-click="editTransaction(transaction)">
 
                                     <td class="date-column" ng-bind="transaction.date | date:'dd/MM'"></td>
 
